--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
+    <string name="app_four_two_widget_description">4*2的小组件</string>
     <string name="app_accessibility_description">这里是使用无障碍权限的描述</string>
 </resources>
